# Paradigm-application

./: README.md  rust-toolchain.toml
contracts/src/: ThousandETHDeposit.sol
contracts/test/: ThousandETHDeposit.t.sol
listener/: Cargo.toml
listener/src/: lib.rs  listener.rs  main.rs
listener/src/contracts/: deposit_contract.json  mod.rs
