[package]
name = "listener"
version = "0.1.0"
edition = "2021"

[dependencies]


# alloy
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695", features = ["ipc", "ws", "pubsub"] }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695", features = ["ipc", "ws", "pubsub"] }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "39b8695", features = [
  "jsonrpsee-types"
] }
alloy-sol-types = { version = "0.7.2", features = ["json"] }
alloy-sol-macro = { version = "0.7.2", features = ["json"] }
alloy-primitives = { version = "0.7.2", features = ["rlp"] }


# error handling
eyre = "0.6.5"


# async
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3.21"
futures = "0.3.28"